# domotik-mcu-rs

./: .gdbinit  Cargo.toml  README.rst
.cargo/: config.toml
main/: Cargo.toml
main/src/: board.rs  can.rs  ethernet.rs  http_requests.rs  main.rs  network.rs  ring.rs  sensor.rs  serial.rs  utils.rs
main/src/state/: linky.rs  mod.rs
my-libs/: Cargo.toml
my-libs/src/: lib.rs  linky.rs
openocd/: openocd.cfg
src/: boot.rs  main.rs  network.rs  planner.rs  serial.rs
src/state/: outdoor.rs
utils/: checksum.py
