[workspace]
members = [".", "my-libs"]
resolver = "3"

[package]
name = "domotik-mcu"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.5"
embedded-io = { version = "0.7.1" }
embedded-io-async = { version = "0.7.0" }
embassy-bmp280 = { version = "0.2.1" }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
futures-util = { version = "0.3.30", default-features = false }
heapless = { version = "0.9", default-features = false }
static_cell = "2"
reqwless = {version = "0.14.0", default-features = false, features = ["defmt"]}

embassy-stm32 = { version = "0.6.0", features = ["defmt", "stm32h523cc", "unstable-pac", "memory-x", "time-driver-tim4", "exti", "chrono"] }
embassy-sync = { version = "0.8.0", features = ["defmt"] }
embassy-embedded-hal = { version = "0.6.0", features = ["defmt"] }
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.5.1", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-futures = { version = "0.1.2" }
embassy-net = { version = "0.9.1", features=["defmt", "dns", "medium-ethernet", "proto-ipv4", "tcp"] }
embassy-net-wiznet = { version = "0.3.0", features = ["defmt"] }

defmt = "1.0.1"
defmt-rtt = "1.0.0"

my_libs = {path = "./my-libs"}
